# ESP32_simulation

./: .gitignore  CMakeLists.txt  Dockerfile  ESP32_RSA_Assignment_Guide.txt  ESP32_RSA_Hardware_Accelerator_Note.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  rsa_baseline.c  rsa_baseline.h  rsa_hw_accel.c  rsa_refans.c.example  rsa_student.c
scripts/: qemu_run.sh  setup_from_github.sh
tools/: score_host.py
